# dao-services

./: .gitignore  AUDIT-SUMMARY.txt  CLAUDE.md  DEBT-AUDIT.md  IMPLEMENTATION-REPORT.md  PROGRESS.md  QUICKSTART-DEV.md  QUICKSTART.md  README-SETUP.md  README.md  REMEDIATION-PLAN.md  VALIDATION-QUICKSTART.md  build-log.txt  foundry.toml  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.claude/rules/: polkadot-patterns.md
.lean-swarm/: PHASE-0.5-NEXT-ACTIONS.md  config.yaml  setup-swarm.ps1
.lean-swarm/lenses/: complexity.md  sandbox.md  specs.md
.lean-swarm/metrics/: phase-0.5-roi-report.md
_archive/20260210-doc-cleanup/: ARCHIVE-REASON.md
_archive/20260210-ink-abandoned/: ARCHIVE-REASON.md
_archive/20260210-ink-abandoned/contracts-ink/: Cargo.toml  DEPLOYMENT-GUIDE.md  STATUS.md  TESTING-GUIDE.md
_archive/20260210-ink-abandoned/contracts-ink/dao-membership/: Cargo.toml
_archive/20260210-ink-abandoned/contracts-ink/dao-treasury/: Cargo.toml
_docs/: Analyse_rm.md
_docs/analyses/: 20260209-bibliography-curation-complete.md  20260216-competitive-analysis-marketplaces.md  20260216-strategic-note-onboarding-consultants.md  20260216-strategic-note-sas-dao-legal.md  20260216-strategic-note-smart-contracts-billing.md  20260216-strategic-note-tokenomics.md  20260216-web3-success-failure-factors.md  20260217-client-acquisition-plan.md  20260217-consolidated-roadmap-personas.md  20260217-feedback-synthesis.md  20260217-financial-model.md  20260217-legal-workstream.md  20260217-roadmap-impact-study.md  20260218-mvp-reorientation-decisions.md
_docs/business-logic/: DAOGovernor-specification.md  DAOMembership-specification.md  DAOTreasury-specification.md  MissionEscrow-specification.md  ServiceMarketplace-specification.md
_docs/guides/: contract-validation-strategy.md  ink-vs-substrate-decision.md  paseo-deployment-checklist.md  polkadot-2.0-architecture.md  polkadot-2.0-migration-plan.md  polkadot-best-practices.md  polkadot-deployment-guide.md  polkadot-project-management.md  substrate-pallet-patterns.md  xcm-integration-patterns.md
_docs/implementation/: phase-3.1-servicemarketplace-plan.md
_docs/reports/: 20260210-polkadot-environment-audit.md
_docs/security/: audit-summary.md  owasp-checklist.md  static-analysis-report.md  threat-model.md
_scripts/: README.md  fix-weights-v2.ps1  fix-weights.ps1
_scripts/setup/: setup-skills-junction.ps1
_scripts/validation/: validate-contracts.ps1
backend/: TODO-SUPABASE-TYPES.md  supabase.d.ts  tsconfig.json
backend/__tests__/: api.routes.test.ts  applications.routes.test.ts  event-sync.test.ts  missions.routes.test.ts
backend/services/: TODOS-RESOLVED.md  errors.ts  event-sync-worker.ts  logger.ts  retry.ts  supabase-helpers.ts  validation.ts  webhooks.ts
backend/supabase/: database.types.ts
contracts/: .env.example  COMPLIANCE_SPEC.md  DEPLOYMENT.md  ESCROW_DISPUTE_SPEC.md  README.md  deploy-paseo.ps1
contracts-ink/: MIGRATION-REPORT.md  README.md  build-all.ps1
contracts-ink/dao-governor/: Cargo.toml  lib.rs
contracts-ink/dao-membership/: lib.rs
contracts-ink/dao-treasury/: lib.rs
contracts/archive/: HybridPaymentSplitter.sol  MilestoneEscrow.sol  MissionEscrow.t.sol
contracts/script/: Deploy.s.sol  DeployGovernance.s.sol  VerifyDeployment.s.sol
contracts/src/: ComplianceRegistry.sol  DAOGovernor.sol  DAOMembership.sol  DAOTreasury.sol  DisputeResolution.sol  HybridPaymentSplitter.sol  MilestoneEscrow.sol  MissionEscrow.sol  Reputation.sol  ReputationTracker.sol  ServiceMarketplace.sol
contracts/test/: ComplianceRegistry.t.sol  DAOGovernor.t.sol  DAOMembership.t.sol  DAOTreasury.t.sol  DisputeResolution.t.sol  HybridPaymentSplitter.t.sol  Integration.t.sol  Marketplace.t.sol  Marketplace.t.sol.old  MilestoneEscrow.t.sol  Reputation.t.sol  ReputationTracker.t.sol  ServiceMarketplace.compliance.t.sol.old  ServiceMarketplace.t.sol
docs/: 01-fundamentals && cp Cdev_docsanalysespolkadot-governance-fellowship-model.md CdevDAOdocs02-governance  03-ecosystem && cp Cdev_docsanalysespolkadot-dao-design.md CdevDAOdocs04-design
docs/05-extensions/: polkadot-dao-services-ai-design.md
docs/06-onboarding/: README.md  blockchain-basics.md  faq.md  glossary-simple.md  guide-dispute-resolution.md  guide-multi-mission-management.md  guide-proposal-writing.md  guide-tax-declaration.md  onboarding-client.md  onboarding-consultant.md  onboarding-wizard-specs.md  quick-start-client.md  quick-start-consultant.md
docs/07-implementation/: IMPLEMENTATION-SUMMARY.md  governance-architecture.md
docs/07-theory/: README.md  phase3-theoretical-foundations.md  phase3-visual-explainers.md
docs/user-guides/: quality-assurance-system.md  quick-start-client.md  quick-start-consultant.md
frontend/: README.md  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT5_SUMMARY.md  SPRINT6_SUMMARY.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/pages/: _app.tsx  governance.tsx
substrate/: Cargo.toml
substrate-runtime/: .gitignore  Cargo.toml  README-SUBSTRATE.md  build-output.txt
substrate-runtime/pallets/governance/: Cargo.toml
substrate-runtime/pallets/governance/src/: lib.rs
substrate-runtime/pallets/marketplace/: Cargo.toml
substrate-runtime/pallets/marketplace/src/: lib.rs
substrate-runtime/pallets/membership/: Cargo.toml
substrate-runtime/pallets/membership/src/: lib.rs
substrate-runtime/pallets/payment-splitter/: Cargo.toml
substrate-runtime/pallets/payment-splitter/src/: lib.rs
substrate-runtime/pallets/treasury/: Cargo.toml
substrate-runtime/pallets/treasury/src/: lib.rs
substrate-runtime/runtime/: Cargo.toml
substrate-runtime/tests/: integration_tests.rs
substrate/pallets/dao-membership/: Cargo.toml
substrate/pallets/dao-membership/src/: lib.rs
substrate/pallets/marketplace/: Cargo.toml
substrate/pallets/marketplace/src/: lib.rs
substrate/pallets/mission-escrow/: Cargo.toml
substrate/pallets/mission-escrow/src/: lib.rs
substrate/runtime/: Cargo.toml
substrate/runtime/src/: lib.rs
(+64 files in other folders)
