[package]
name = "dao-runtime"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-block-builder = { workspace = true }
sp-api = { workspace = true }

# FRAME dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

# FRAME pallets
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Custom pallets
pallet-membership = { workspace = true }
pallet-treasury = { workspace = true }
pallet-governance = { workspace = true }
pallet-marketplace = { workspace = true }
pallet-payment-splitter = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "20.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-block-builder/std",
    "sp-api/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-membership/std",
    "pallet-treasury/std",
    "pallet-governance/std",
    "pallet-marketplace/std",
    "pallet-payment-splitter/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
