[package]
name = "dao-runtime"
version = "1.0.0"
edition = "2021"

[dependencies]
# Substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-inherents = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }

# FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Battle-tested pallets
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-democracy = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }

# Custom pallets
pallet-dao-membership = { path = "../pallets/dao-membership", default-features = false }
pallet-mission-escrow = { path = "../pallets/mission-escrow", default-features = false }
pallet-marketplace = { path = "../pallets/marketplace", default-features = false }

# Codec
codec = { workspace = true }
scale-info = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-transaction-pool/std",
    "sp-inherents/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-dao-membership/std",
    "pallet-mission-escrow/std",
    "pallet-marketplace/std",
    "codec/std",
    "scale-info/std",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
]

try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
]
