[workspace]
members = [
    "dao-membership",
    "dao-governor",
    "dao-treasury",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["DAO Services AI Team"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"
