[package]
name = "pallet-membership"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
