[package]
name = "pallet-dao-membership"
version = "1.0.0"
edition = "2021"
license = "MIT-0"

[dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
]
