[package]
name = "dao-membership"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ink = { workspace = true, features = ["std"] }
scale = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
