[package]
name = "dao-treasury"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ink = { workspace = true, features = ["std"] }
scale = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }

# Reference to dao-membership
dao-membership = { path = "../dao-membership", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "dao-membership/std",
]
ink-as-dependency = []
e2e-tests = []
